Changelog
=========

1.0 (unreleased)
------------------

- Added HTML5 validation for HTML file
  [macagua]
- Updated the diazo preview file for 'Startup Plone Classic' theme
  [macagua]
- Updated the diazo preview file for 'Startup Plone Sunburst' theme
  [macagua]
- Fixed GET '/++theme++classic/img/logo.jpg' 404 (Not Found) Error
  [macagua]
- Fixed IOError: Error reading file '/++theme++classic/rules.xml'
  [macagua]
- Fixed GET '/++theme++sunburst/css/style.css' net::ERR_ABORTED Error
  [macagua]
- Fixed GET '/++theme++sunburst/img/logo.png' 404 (Not Found) Error
  [macagua]
- Fixed IOError: Error reading file '/++theme++sunburst/rules.xml'
  [macagua]
- Fixed GET '/++theme++startup_initializr_responsive/img/apple-touch-icon.png' 404 (Not Found) Error
  [macagua]
- Fixed GET '/++theme++startup_initializr_responsive/img/favicon.ico' 404 (Not Found) Error
  [macagua]
- Updated the diazo preview file for 'Startup Initializr Responsive' theme
  [macagua]
- Updated the diazo preview file for 'Startup Initializr HTML5 Boilerplate' theme
  [macagua]
- Fixed GET '/++theme++startup_initializr_h5bp/img/plone-icon-128.png' 404 (Not Found) Error
  [macagua]
- Fixed GET '/++theme++startup_initializr_h5bp/img/plone-logo-16.png' 404 (Not Found) Error
  [macagua]
- Updated the diazo preview file for 'Startup Initializr Bootstrap Jumbotron' theme
  [macagua]
- Fixed GET '/++theme++startup_initializr_bootstrap/img/apple-touch-icon.png' 404 (Not Found) Error
  [macagua]
- Fixed GET '/++theme++startup_initializr_bootstrap/img/favicon.ico' 404 (Not Found) Error
  [macagua]
- Updated the title and description for diazo manifest files
  [macagua]
- Added improvements about README file
  [macagua]
- Fixed GET '/++theme++initializr_bootstrap/img/plone-logo-16.png' 
  404 (Not Found) Error
  [macagua]
- Fixed GET '/++theme++h5bp/img/plone-icon-128.png' 404 (Not Found) Error
  [macagua]
- Fixed the 'Cannot add attributes to an element if children have 