@@ -15,7 +15,7 @@ textarea {
   border: 1px solid #dddddd;
   border-color: #666666 #dddddd #dddddd #666666;
   color: black;
-  background: white url("/input_background.png") repeat-x;
+  background: white url("/++theme++startup_classic/img/input_background.png") repeat-x;
   width: 100%;
 }
 
@@ -26,7 +26,7 @@ input {
   border-color: #666666 #dddddd #dddddd #666666;
   color: black;
   vertical-align: middle;
-  background: white url("/input_background.png") repeat-x;
+  background: white url("/++theme++startup_classic/img/input_background.png") repeat-x;
   font-size: 1em;
 }
 
