@@ -2782,7 +2782,7 @@
     border: 1px solid #dddddd;
     border-color: #666666 #dddddd #dddddd #666666;
     color: black;
-    background: white url("/input_background.png") repeat-x;
+    background: white url("/++theme++startup_classic/img/input_background.png") repeat-x;
     width: 100%;
   }
 
@@ -2793,7 +2793,7 @@
     border-color: #666666 #dddddd #dddddd #666666;
     color: black;
     vertical-align: middle;
-    background: white url("/input_background.png") repeat-x;
+    background: white url("/++theme++startup_classic/img/input_background.png") repeat-x;
     font-size: 1em;
   }
 
