@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Fixed GET '/input_background.png' 404 (Not Found) Error
+  [macagua]
 - Added HTML5 validation for HTML file
   [macagua]
 - Updated the diazo preview file for 'Startup Plone Classic' theme
